# Parallel-N-Body

./: CMakeLists.txt
include/: io.hpp  physics.hpp  types.hpp
src/: io.cpp  main.cpp  physics.cpp
